Make version of dependencies transparent, update ffmpeg, intelligentify the linux build script a lot

--- a/.gitignore
+++ b/.gitignore
@@ -2,7 +2,7 @@
 *.pro.user*
 
 # Ignore dependencies obtained with the platform build scripts
-deps/
+dependencies/
 
 # Ignore documentation folders generated with Doxygen
 html/
