--- a/.gitignore
+++ b/.gitignore
@@ -5,5 +5,8 @@
 dependencies/
 
 # Ignore documentation folders generated with Doxygen
-html/
-latex/
+/html/
+/latex/
+
+# Ignore OS X clutter
+/.DS_Store
