--- a/assets/Info.plist
+++ b/assets/Info.plist
@@ -2,21 +2,19 @@
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-  <key>NSPrincipalClass</key>
-  <string>NSApplication</string>
-  <key>CFBundleIconFile</key>
-  <string></string>
-  <key>CFBundlePackageType</key>
-  <string>APPL</string>
-  <key>CFBundleGetInfoString</key>
-  <string>Created by Qt/QMake</string>
-  <key>CFBundleSignature</key>
-  <string>????</string>
-  <key>CFBundleExecutable</key>
-  <string>zeitdice</string>
-  <key>CFBundleIdentifier</key>
-  <string>com.challengelabs.zeitdice</string>
-  <key>NOTE</key>
-  <string>Enjoy timelapse!</string>
+	<key>NSPrincipalClass</key>
+	<string>NSApplication</string>
+	<key>CFBundleIconFile</key>
+	<string>zeitmachine.icns</string>
+	<key>CFBundlePackageType</key>
+	<string>APPL</string>
+	<key>CFBundleGetInfoString</key>
+	<string>Created by Qt/QMake</string>
+	<key>CFBundleSignature</key>
+	<string>????</string>
+	<key>CFBundleExecutable</key>
+	<string>zeitmachine</string>
+	<key>CFBundleIdentifier</key>
+	<string>com.zeitdice.zeitmachine</string>
 </dict>
 </plist>
